[package]
name = "ar8030-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7" }
clap_derive = "4.5.5"
crossbeam = "0.8.4"
env_logger = "0.11.3"
parking_lot = "0.12.3"
rusb = "0.9.4"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
